--- a/src/UWP/OSDP-Bench-UWP.csproj
+++ b/src/UWP/OSDP-Bench-UWP.csproj
@@ -12,7 +12,7 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.18362.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.17763.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -114,6 +114,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    <RuntimeIdentifier>win</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -153,16 +154,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.10</Version>
+      <Version>6.2.11</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.3.200213001</Version>
+      <Version>2.5.0</Version>
     </PackageReference>
     <PackageReference Include="MvvmCross">
-      <Version>6.4.2</Version>
+      <Version>7.1.2</Version>
     </PackageReference>
-    <PackageReference Include="OSDP.Net">
-      <Version>1.0.0-beta3</Version>
+    <PackageReference Include="System.IO.Ports">
+      <Version>5.0.0</Version>
+    </PackageReference>
+    <PackageReference Include="ValueConverters">
+      <Version>2.0.20011.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
