--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="MvvmCross" Version="7.1.2" />
     <PackageReference Include="OSDP.Net" Version="2.0.3" />
   </ItemGroup>
