Increase font size for status and add colors

--- a/src/UWP/OSDP-Bench-UWP.csproj
+++ b/src/UWP/OSDP-Bench-UWP.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Platform\UwpSerialPort.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setup.cs" />
+    <Compile Include="Converters\StatusLevelConverter.cs" />
     <Compile Include="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
@@ -244,6 +245,7 @@
   <ItemGroup>
     <None Include="Assets\Logo.pdf" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
