--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>OSDP-Bench.Core</AssemblyName>
     <RootNamespace>OSDPBench.Core</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="MvvmCross" Version="8.0.2" />
+    <PackageReference Include="MvvmCross" Version="9.0.1" />
     <PackageReference Include="OSDP.Net" Version="3.0.3" />
   </ItemGroup>
 
