--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -8,8 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="MvvmCross" Version="9.0.1" />
-    <PackageReference Include="OSDP.Net" Version="3.0.3" />
+    <PackageReference Include="MvvmCross" Version="9.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\OSDP.Net\src\OSDP.Net\OSDP.Net.csproj" />
   </ItemGroup>
 
 </Project>
