--- a/src/OSDP-Bench-Android/OSDP-Bench-Android.csproj
+++ b/src/OSDP-Bench-Android/OSDP-Bench-Android.csproj
@@ -19,9 +19,13 @@
       <ProjectReference Include="..\UsbSerialForAndroid\UsbSerialForAndroid\UsbSerialForAndroid.csproj" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="MvvmCross" Version="9.0.1" />
+      <PackageReference Include="MvvmCross" Version="9.0.2" />
+      <PackageReference Include="MvvmCross.Plugin.Visibility" Version="9.0.2" />
       <PackageReference Include="Serilog" Version="2.12.0" />
       <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
       <PackageReference Include="Serilog.Sinks.Xamarin" Version="1.0.0" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Resources\menu\" />
     </ItemGroup>
 </Project>
