--- a/src/UI/WinUI/WinUI.csproj
+++ b/src/UI/WinUI/WinUI.csproj
@@ -9,6 +9,7 @@
     <RuntimeIdentifiers>win10-x86;win10-x64;win10-arm64</RuntimeIdentifiers>
     <UseWinUI>true</UseWinUI>
     <ApplicationIcon>Logo.ico</ApplicationIcon>
+    <AssemblyName>OSDP-Bench</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="MainWindow.xaml" />
