--- a/src/OSDP-Bench-Android/AndroidManifest.xml
+++ b/src/OSDP-Bench-Android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.z_bitco.com.osdp_bench">
 	<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true"></application>
-	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="31" />
+	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="33" />
 	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
