--- a/src/OSDP-Bench-Android/OSDP-Bench-Android.csproj
+++ b/src/OSDP-Bench-Android/OSDP-Bench-Android.csproj
@@ -1,8 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net6.0-android</TargetFramework>
-        <SupportedOSPlatformVersion>31.0</SupportedOSPlatformVersion>
-        <RootNamespace>OSDP_Bench_Android</RootNamespace>
+        <TargetFramework>net6.0-android33.0</TargetFramework>
+        <RootNamespace>OSDPBench.UI.Android</RootNamespace>
         <OutputType>Exe</OutputType>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
@@ -10,6 +9,14 @@
         <ApplicationVersion>1</ApplicationVersion>
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
         <TargetFrameworkVersion>v12.0</TargetFrameworkVersion>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+      <AndroidKeyStore>False</AndroidKeyStore>
+      <AndroidLinkTool>r8</AndroidLinkTool>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+      <AndroidKeyStore>False</AndroidKeyStore>
+      <AndroidLinkTool>r8</AndroidLinkTool>
     </PropertyGroup>
     <ItemGroup>
       <None Remove="Resources\drawable\ic_launcher_foreground.xml" />
