Move Android project to UI folder

--- a/src/UI/Android/Android.csproj
+++ b/src/UI/Android/Android.csproj
@@ -23,7 +23,7 @@
       <None Remove="Resources\layout\UpdateCommunicationsView.axml" />
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\Core\Core.csproj" />
+      <ProjectReference Include="..\..\Core\Core.csproj" />
       <ProjectReference Include="..\UsbSerialForAndroid\UsbSerialForAndroid\UsbSerialForAndroid.csproj" />
     </ItemGroup>
     <ItemGroup>
