--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/UsbSerialForAndroid"]
-	path = src/UsbSerialForAndroid
+[submodule "src/UI/UsbSerialForAndroid"]
+	path = src/UI/UsbSerialForAndroid
 	url = https://github.com/bytedreamer/UsbSerialForAndroid
