--- a/src/UI/Android/Android.csproj
+++ b/src/UI/Android/Android.csproj
@@ -1,17 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net6.0-android33.0</TargetFramework>
         <RootNamespace>OSDPBench.UI.Android</RootNamespace>
         <OutputType>Exe</OutputType>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <ApplicationId>com.z-bitco.OSDPBench</ApplicationId>
+	    <ApplicationId>com.z-bitco.OSDPBench</ApplicationId>
         <ApplicationVersion>1</ApplicationVersion>
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
         <TargetFrameworkVersion>v12.0</TargetFrameworkVersion>
     </PropertyGroup>
 
 	<ItemGroup>
+      <None Remove="linker.xml" />
       <None Remove="Resources\drawable\ic_launcher_foreground.xml" />
       <None Remove="Resources\layout\UpdateCommunicationsView.axml" />
     </ItemGroup>
@@ -28,5 +29,10 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Resources\menu\" />
+    </ItemGroup>
+    <ItemGroup>
+      <LinkDescription Include="linker.xml">
+        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      </LinkDescription>
     </ItemGroup>
 </Project>
