--- a/src/UI/WinUI/WinUI.csproj
+++ b/src/UI/WinUI/WinUI.csproj
@@ -25,7 +25,7 @@
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.WinUI" Version="7.1.2" />
     <PackageReference Include="CommunityToolkit.WinUI.UI" Version="7.1.2" />
-    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230313.1" />
+    <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.3.230331000" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.756" />
     <PackageReference Include="MvvmCross" Version="9.0.9" />
     <PackageReference Include="Serilog" Version="2.12.0" />
