Add scroll bars to WinUI

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ _UpgradeReport_Files/
 /src/.idea/.idea.OSDP-Bench/.idea
 AppPackages/
 BundleArtifacts/
+/src/UI/WinUI (Package)/WinUI (Package).assets.cache
