--- a/ci/build.yml
+++ b/ci/build.yml
@@ -1,10 +1,17 @@
 ﻿steps:
   
-- task: UseDotNet@2
-  displayName: 'Install .NET Core SDK'
-  inputs:
-    packageType: 'sdk'
-    version: '8.x'
+#- task: UseDotNet@2
+#  displayName: 'Install .NET Core SDK'
+#  inputs:
+#    packageType: 'sdk'
+#    version: '8.x'
+#    
+#- task: DotNetCoreCLI@2
+#  displayName: 'Unit Test Core'
+#  inputs:
+#    command: 'test'
+#    projects: 'test/*Tests/*.csproj'
+#    arguments: '--configuration $(buildConfiguration)'
     
 - task: NuGetToolInstaller@1
 
