--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,12 +15,17 @@ variables:
   outputDirectory: '$(build.binariesDirectory)/$(buildConfiguration)'
 
 jobs:
-
-- job: android-build
+- job: android_build
   pool:
     vmImage: 'windows-latest'
   steps:
     - template: ci/android-build.yml
+      
+- job: winui_build
+  pool:
+    vmImage: 'windows-latest'
+  steps:
+    - template: ci/winui-build.yml
       
 - job: testing
   pool:
