--- a/ci/winui-build.yml
+++ b/ci/winui-build.yml
@@ -7,7 +7,6 @@
 
   - task: VSBuild@1
     inputs:
-      platform: 'x64'
-      solution: '$(solution)'
+      solution: '/src/UI/WinUI (Package)/WinUI (Package).wapproj'
       configuration: '$(buildConfiguration)'
       msbuildArgs: '/p:AppxBundlePlatforms="$(buildPlatform)" /p:AppxPackageDir="$(appxPackageDir)" /p:AppxBundle=Always /p:UapAppxPackageBuildMode=StoreUpload /p:AppxPackageSigningEnabled=false'
