--- a/ci/winui-build.yml
+++ b/ci/winui-build.yml
@@ -8,5 +8,6 @@
   - task: VSBuild@1
     inputs:
       solution: 'src/UI/WinUI (Package)/WinUI (Package).wapproj'
+      platform: 'x64'
       configuration: '$(buildConfiguration)'
-      msbuildArgs: '/p:AppxBundlePlatforms="$(buildPlatform)" /p:AppxPackageDir="$(appxPackageDir)" /p:AppxBundle=Always /p:UapAppxPackageBuildMode=StoreUpload /p:AppxPackageSigningEnabled=false'
+      msbuildArgs: '/p:AppxPackageDir="$(appxPackageDir)" /p:AppxBundle=Always /p:UapAppxPackageBuildMode=StoreUpload /p:RuntimeIdentifiers="win-x64;win-arm64" -restore'
