Attempting to remove warning message in Android build

--- a/ci/android-build.yml
+++ b/ci/android-build.yml
@@ -19,3 +19,6 @@
     projectFile: '**/*droid*.csproj'
     outputDirectory: '$(outputDirectory)'
     configuration: '$(buildConfiguration)'
+    msbuildVersion: latest
+    msbuildArchitectureOption: x64
+    
