--- a/src/MvvmCore/MvvmCore.csproj
+++ b/src/MvvmCore/MvvmCore.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="OSDP.Net" Version="4.1.7" />
   </ItemGroup>
 
 </Project>
