--- a/src/MvvmCore/MvvmCore.csproj
+++ b/src/MvvmCore/MvvmCore.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="OSDP.Net" Version="4.1.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Platforms\" />
+  </ItemGroup>
+
 </Project>
