--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>OSDPBench.Core</AssemblyName>
+    <RootNamespace>OSDPBench.Core</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
