Configure Core to be published as Nuget package

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -1,11 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <Version>1.0.2</Version>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>OSDPBench.Core</AssemblyName>
     <RootNamespace>OSDPBench.Core</RootNamespace>
+    <Title>OSDP Bench Core</Title>
+    <Authors>Jonathan Horvath</Authors>
+    <Description>Core functionality for OSDP Bench.</Description>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <LangVersion>default</LangVersion>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <RepositoryUrl>https://github.com/Z-bit-Systems-LLC/OSDP-Bench</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
