--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <Version>1.0.2</Version>
     <TargetFramework>net8.0</TargetFramework>
+    <RuntimeIdentifiers>win-x64;win-arm64</RuntimeIdentifiers>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>OSDPBench.Core</AssemblyName>
