--- a/src/UI/Windows/Windows.csproj
+++ b/src/UI/Windows/Windows.csproj
@@ -13,6 +13,8 @@
     <AssemblyName>OSDPBench</AssemblyName>
     <RootNamespace>OSDPBench.Windows</RootNamespace>
     <StartupObject>OSDPBench.Windows.App</StartupObject>
+    <AssemblyVersion>3.0.2.0</AssemblyVersion>
+    <FileVersion>3.0.2.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
