--- a/ci/testing.yml
+++ b/ci/testing.yml
@@ -10,4 +10,18 @@
   inputs:
     command: 'test'
     projects: 'test/*Tests/*.csproj'
-    arguments: '--configuration $(buildConfiguration)'
+    arguments: '--configuration $(buildConfiguration)' --collect:"XPlat Code Coverage"'
+
+- task: reportgenerator@5
+  displayName: 'Generate Code Coverage Report'
+  inputs:
+    reports: '$(Agent.TempDirectory)/**/coverage.cobertura.xml'
+    targetdir: '$(Build.SourcesDirectory)/coveragereport'
+    reporttypes: 'Cobertura;HtmlInline_AzurePipelines'
+
+- task: PublishCodeCoverageResults@1
+  displayName: 'Publish Code Coverage Results'
+  inputs:
+    codeCoverageTool: 'Cobertura'
+    summaryFileLocation: '$(Build.SourcesDirectory)/coveragereport/Cobertura.xml'
+    reportDirectory: '$(Build.SourcesDirectory)/coveragereport'
