--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,1 +1,3 @@
-files: []
+files:
+  - source: /src/Core/Resources/Resources.resx
+    translation: /src/Core/Resources/Resources.%two_letters_code%.resx
